Fetching variables from ancestor entities